# geforcenow-ubuntu-touch

./: CMakeLists.txt  LICENSE  README.md  geforcenow.desktop  manifest.json.in
.github/workflows/: clickable.yml
qml/: Main.qml  script.js
